worked on ableton

--- a/Ableton/index.html
+++ b/Ableton/index.html
@@ -177,15 +177,17 @@
             <div class="page-about__collage_5 image-section">
                 <div class="page-about__collarge_5_wrapper">
                     <img src="img/photo-8.jpg" alt="">
-                    <h1>
-                        We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
-                        <br>
-                        <a class="has-arrow" href="#">See latest jobs></a>
-                    </h1>
+                    <div class="body-text">
+                        <h1>
+                            We’re really proud of the work we’ve done so far. But there’s so much more to come. If you’d like to be a part of it, please join us.
+                            <br>
+                            <a class="has-arrow" href="#">See latest jobs></a>
+                        </h1>
+                    </div>
                 </div>
             </div>
         </div>
-
+        <div class="footer__seperator"></div>
         <div class="footer">
             <h2>Ableton</h2>
 
