--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -28,6 +28,38 @@
                   <a href="#">Start free</a>
                 </div>
               </nav>
+              <div class="product-drop-menu">
+                <ul>
+                  <h2>Client Management</h2>
+                  <li><a href="">CRM</a></li>
+                  <li><a href="">Scheduling</a></li>
+                  <li><a href="">Proposals</a></li>
+                  <li><a href="">Contacts</a></li>
+                  <li><a href="">Forms</a></li>
+                </ul>
+                <ul>
+                  <h2>Project Management</h2>
+                  <li><a href="">Time tracking</a></li>
+                  <li><a href="">Tasks</a></li>
+                  <li><a href="">File sharing</a></li>
+                  <li><a href="">Client portal</a></li>
+                  <li><a href="">Collaboration</a></li>
+                </ul>
+                <ul>
+                  <h2>Financial Management</h2>
+                  <li><a href="">Invoicing</a></li>
+                  <li><a href="">Payments</a></li>
+                  <li><a href="">Accounting</a></li>
+                  <li><a href="">Taxes</a></li>
+                  <li><a href="">Banking</a></li>
+                </ul>
+                <div>
+                  <h2>What's new</h2>
+                  <img src="img/scheduling-preview.jpg" alt="" />
+                  <p>Branded scheduling portal</p>
+                  <a href="#">Learn more</a>
+                </div>
+              </div>
             </div>
             <div class="line"></div>
             <div class="desktop-secondary-nav">
