--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -642,7 +642,7 @@
               <a href="#"><img src="img/menu.svg" /></a>
             </div>
           </div>
-          <div class="mobile-nav-menu-container active">
+          <div class="mobile-nav-menu-container">
             <div class="mobile-nav-menu-wrapper">
               <div class="mobile-nav-menu line-bottom">
                 <div class="mobile-nav-menu-title">
@@ -757,6 +757,263 @@
       </div>
       <div class="box-shadow"></div>
     </header>
+    <section class="section-1">
+      <div class="section-1-container">
+        <div class="section-1-title">
+          <h2>Pick the best plan for Your business</h2>
+        </div>
+
+        <div class="section-1-switch">
+          <div class="toggle-switch">
+            <label>
+              <input type="checkbox" />
+              <span class="slider">
+                <div class="monthly-sub sub">Monthly</div>
+                <div class="yearly-sub sub">
+                  Yearly <span>2 months for free</span>
+                </div>
+              </span>
+            </label>
+          </div>
+        </div>
+
+        <div class="section-1-body">
+          <div class="card-container subscription active">
+            <div class="card">
+              <div class="card-header line-bottom">
+                <div class="card-header-title">
+                  <h3>Starter</h3>
+                </div>
+                <div class="card-header-fee">
+                  <p><span>$</span>24 <span>/month</span></p>
+                </div>
+                <div class="card-header-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+                <div class="card-header-text">
+                  <p>
+                    Ideal for freelancers and contractors just starting out.
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <ul>
+                  <li>All Templates</li>
+                  <li>Unlimited Clients & Projects</li>
+                  <li>Invoicing & Payments</li>
+                  <li>Proposal & Contracts</li>
+                  <li>Scheduling</li>
+                  <li>Tasks & Time Tracking</li>
+                  <li>Client CRM</li>
+                  <li>Forms & Questionnaires</li>
+                  <li>Expense Tracking</li>
+                  <li>Up to 5 Project Collaborators</li>
+                </ul>
+                <div class="card-body-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+              </div>
+            </div>
+            <div class="card highlight">
+              <div class="card-header line-bottom">
+                <div class="card-header-title">
+                  <h3>Professional</h3>
+                </div>
+                <div class="card-header-fee">
+                  <p><span>$</span>39 <span>/month</span></p>
+                </div>
+                <div class="card-header-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+                <div class="card-header-text">
+                  <p>
+                    Everything a growing independent business needs to thrive.
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <ul>
+                  <li>Everything in Starter, plus:</li>
+                  <li>Custom Branding</li>
+                  <li>Workflow Automations</li>
+                  <li>Client Portal</li>
+                  <li>Unlimited Scheduling events</li>
+                  <li>QuickBooks Integration</li>
+                  <li>Calendly Integration</li>
+                  <li>Zapier Integration</li>
+                  <li>Up to 15 Project Collaborators</li>
+                </ul>
+              </div>
+              <div class="card-body-button">
+                <button class="button is-small">Start for free</button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header line-bottom">
+                <div class="card-header-title">
+                  <h3>Business</h3>
+                </div>
+                <div class="card-header-fee">
+                  <p><span>$</span>79 <span>/month</span></p>
+                </div>
+                <div class="card-header-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+                <div class="card-header-text">
+                  <p>
+                    The perfect package for small businesses and agencies.
+                    Billed annually.
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <ul>
+                  <li>Everything in Professional, plus:</li>
+                  <li>Subcontractor Management</li>
+                  <li>
+                    Hiring Agreement Templates
+                    <span>(1099 contractors)</span>
+                  </li>
+                  <li>Subcontractor Onboarding</li>
+                  <li>Talent Pool</li>
+                  <li>3 Team Seats additional seats <span>$9/month</span></li>
+                  <li>Accountant Access</li>
+                  <li>Connect Multiple Bank Accounts</li>
+                  <li>Unlimited Subcontractors</li>
+                  <li>Unlimited Project Collaborators</li>
+                </ul>
+              </div>
+              <div class="card-body-button">
+                <button class="button is-small">Start for free</button>
+              </div>
+            </div>
+          </div>
+          <div class="card-container subscription">
+            <div class="card">
+              <div class="card-header line-bottom">
+                <div class="card-header-title">
+                  <h3>Starter</h3>
+                </div>
+                <div class="card-header-fee">
+                  <p><span>$</span>17 <span>/month</span></p>
+                </div>
+                <div class="card-header-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+                <div class="card-header-text">
+                  <p>
+                    Ideal for freelancers and contractors just starting out.
+                    Billed annually.
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <ul>
+                  <li>All Templates</li>
+                  <li>Unlimited Clients & Projects</li>
+                  <li>Invoicing & Payments</li>
+                  <li>Proposal & Contracts</li>
+                  <li>Scheduling</li>
+                  <li>Tasks & Time Tracking</li>
+                  <li>Client CRM</li>
+                  <li>Forms & Questionnaires</li>
+                  <li>Expense Tracking</li>
+                  <li>Up to 5 Project Collaborators</li>
+                </ul>
+                <div class="card-body-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+              </div>
+            </div>
+            <div class="card highlight">
+              <div class="card-header line-bottom">
+                <div class="card-header-title">
+                  <h3>Professional</h3>
+                </div>
+                <div class="card-header-fee">
+                  <p><span>$</span>32 <span>/month</span></p>
+                </div>
+                <div class="card-header-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+                <div class="card-header-text">
+                  <p>
+                    Everything a growing independent business needs to thrive
+                    Billed annually.
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <ul>
+                  <li>Everything in Starter, plus:</li>
+                  <li>Custom Branding</li>
+                  <li>Workflow Automations</li>
+                  <li>Client Portal</li>
+                  <li>Unlimited Scheduling events</li>
+                  <li>QuickBooks Integration</li>
+                  <li>Calendly Integration</li>
+                  <li>Zapier Integration</li>
+                  <li>Up to 15 Project Collaborators</li>
+                </ul>
+              </div>
+              <div class="card-body-button">
+                <button class="button is-small">Start for free</button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header line-bottom">
+                <div class="card-header-title">
+                  <h3>Business</h3>
+                </div>
+                <div class="card-header-fee">
+                  <p><span>$</span>52 <span>/month</span></p>
+                </div>
+                <div class="card-header-button">
+                  <button class="button is-small">Start for free</button>
+                </div>
+                <div class="card-header-text">
+                  <p>
+                    The perfect package for small businesses and agencies.
+                    Billed annually.
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <ul>
+                  <li>Everything in Professional, plus:</li>
+                  <li>Subcontractor Management</li>
+                  <li>
+                    Hiring Agreement Templates
+                    <span>(1099 contractors)</span>
+                  </li>
+                  <li>Subcontractor Onboarding</li>
+                  <li>Talent Pool</li>
+                  <li>3 Team Seats additional seats <span>$9/month</span></li>
+                  <li>Accountant Access</li>
+                  <li>Connect Multiple Bank Accounts</li>
+                  <li>Unlimited Subcontractors</li>
+                  <li>Unlimited Project Collaborators</li>
+                </ul>
+              </div>
+              <div class="card-body-button">
+                <button class="button is-small">Start for free</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="spacer"></div>
+
+    <script>
+      document
+        .querySelector(".toggle-switch input")
+        .addEventListener("input", (e) => {
+          const toggleOutput = document.querySelectorAll(".subscription");
+          toggleOutput.forEach((item) => {
+            item.classList.toggle("active");
+          });
+        });
+    </script>
   </body>
 </html>
