--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -809,9 +809,9 @@
                   <li>Expense Tracking</li>
                   <li>Up to 5 Project Collaborators</li>
                 </ul>
-                <div class="card-body-button">
-                  <button class="button is-small">Start for free</button>
-                </div>
+              </div>
+              <div class="card-body-button">
+                <button class="button is-small">Start for free</button>
               </div>
             </div>
             <div class="card highlight">
@@ -920,12 +920,12 @@
                   <li>Expense Tracking</li>
                   <li>Up to 5 Project Collaborators</li>
                 </ul>
-                <div class="card-body-button">
-                  <button class="button is-small">Start for free</button>
-                </div>
+              </div>
+              <div class="card-body-button">
+                <button class="button is-small">Start for free</button>
               </div>
             </div>
-            <div class="card highlight">
+            <div class="card highlight best-value">
               <div class="card-header line-bottom">
                 <div class="card-header-title">
                   <h3>Professional</h3>
@@ -1004,16 +1004,5 @@
       </div>
     </section>
     <div class="spacer"></div>
-
-    <script>
-      document
-        .querySelector(".toggle-switch input")
-        .addEventListener("input", (e) => {
-          const toggleOutput = document.querySelectorAll(".subscription");
-          toggleOutput.forEach((item) => {
-            item.classList.toggle("active");
-          });
-        });
-    </script>
   </body>
 </html>
