--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -780,7 +780,7 @@
         <div class="section-1-body">
           <div class="card-container subscription active">
             <div class="card">
-              <div class="card-header line-bottom">
+              <div class="card-header">
                 <div class="card-header-title">
                   <h3>Starter</h3>
                 </div>
@@ -796,6 +796,7 @@
                   </p>
                 </div>
               </div>
+              <div class="line-bottom"></div>
               <div class="card-body">
                 <ul>
                   <li>All Templates</li>
@@ -815,7 +816,7 @@
               </div>
             </div>
             <div class="card highlight">
-              <div class="card-header line-bottom">
+              <div class="card-header">
                 <div class="card-header-title">
                   <h3>Professional</h3>
                 </div>
@@ -831,6 +832,7 @@
                   </p>
                 </div>
               </div>
+              <div class="line-bottom"></div>
               <div class="card-body">
                 <ul>
                   <li>Everything in Starter, plus:</li>
@@ -849,7 +851,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header line-bottom">
+              <div class="card-header">
                 <div class="card-header-title">
                   <h3>Business</h3>
                 </div>
@@ -866,6 +868,7 @@
                   </p>
                 </div>
               </div>
+              <div class="line-bottom"></div>
               <div class="card-body">
                 <ul>
                   <li>Everything in Professional, plus:</li>
@@ -890,7 +893,7 @@
           </div>
           <div class="card-container subscription">
             <div class="card">
-              <div class="card-header line-bottom">
+              <div class="card-header">
                 <div class="card-header-title">
                   <h3>Starter</h3>
                 </div>
@@ -907,6 +910,7 @@
                   </p>
                 </div>
               </div>
+              <div class="line-bottom"></div>
               <div class="card-body">
                 <ul>
                   <li>All Templates</li>
@@ -926,7 +930,7 @@
               </div>
             </div>
             <div class="card highlight best-value">
-              <div class="card-header line-bottom">
+              <div class="card-header">
                 <div class="card-header-title">
                   <h3>Professional</h3>
                 </div>
@@ -943,6 +947,7 @@
                   </p>
                 </div>
               </div>
+              <div class="line-bottom"></div>
               <div class="card-body">
                 <ul>
                   <li>Everything in Starter, plus:</li>
@@ -961,7 +966,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header line-bottom">
+              <div class="card-header">
                 <div class="card-header-title">
                   <h3>Business</h3>
                 </div>
@@ -978,6 +983,7 @@
                   </p>
                 </div>
               </div>
+              <div class="line-bottom"></div>
               <div class="card-body">
                 <ul>
                   <li>Everything in Professional, plus:</li>
