--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -639,7 +639,7 @@
               <a href="#"><img src="img/brand.svg" /></a>
             </div>
             <div class="mobile-nav-menu-icon">
-              <a href="#"><img src="img/menu.svg" /></a>
+              <img src="img/menu.svg" />
             </div>
           </div>
           <div class="mobile-nav-menu-container">
