--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -198,7 +198,9 @@
                                   </li>
                                 </ul>
                               </div>
-                              <div class="menu-dropdown__col2_footer">
+                              <div
+                                class="menu-dropdown__col2_footer hover-link"
+                              >
                                 <a href="">See all templates</a>
                               </div>
                             </div>
@@ -272,7 +274,9 @@
                                   </li>
                                 </ul>
                               </div>
-                              <div class="menu-dropdown__col2_footer">
+                              <div
+                                class="menu-dropdown__col2_footer hover-link"
+                              >
                                 <a href="">See all templates</a>
                               </div>
                             </div>
@@ -340,7 +344,9 @@
                                   </li>
                                 </ul>
                               </div>
-                              <div class="menu-dropdown__col2_footer">
+                              <div
+                                class="menu-dropdown__col2_footer hover-link"
+                              >
                                 <a href="">See all templates</a>
                               </div>
                             </div>
@@ -394,7 +400,9 @@
                                   </li>
                                 </ul>
                               </div>
-                              <div class="menu-dropdown__col2_footer">
+                              <div
+                                class="menu-dropdown__col2_footer hover-link"
+                              >
                                 <a href="">See all templates</a>
                               </div>
                             </div>
@@ -470,7 +478,9 @@
                                   </li>
                                 </ul>
                               </div>
-                              <div class="menu-dropdown__col2_footer">
+                              <div
+                                class="menu-dropdown__col2_footer hover-link"
+                              >
                                 <a href="">See all templates</a>
                               </div>
                             </div>
@@ -522,7 +532,9 @@
                                   </li>
                                 </ul>
                               </div>
-                              <div class="menu-dropdown__col2_footer">
+                              <div
+                                class="menu-dropdown__col2_footer hover-link"
+                              >
                                 <a href="">See all templates</a>
                               </div>
                             </div>
@@ -572,7 +584,9 @@
                                   </li>
                                 </ul>
                               </div>
-                              <div class="menu-dropdown__col2_footer">
+                              <div
+                                class="menu-dropdown__col2_footer hover-link"
+                              >
                                 <a href="">See all templates</a>
                               </div>
                             </div>
@@ -1004,6 +1018,63 @@
               <div class="card-body-button">
                 <button class="button is-small">Start for free</button>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-2">
+      <div class="section-2-container">
+        <div class="section2-title">
+          <h2>
+            Take it to the <br />
+            next level with add-ons
+          </h2>
+        </div>
+        <div class="adds-on-container">
+          <div class="adds-on-card">
+            <div class="adds-on-content">
+              <h3>Collaborators</h3>
+              <div class="adds-on-body">
+                <p>
+                  Invite other users to specific projects for limited access and
+                  functionality.
+                </p>
+              </div>
+            </div>
+            <div class="adds-on-price">
+              <p>Free</p>
+            </div>
+          </div>
+          <div class="adds-on-card">
+            <div class="adds-on-content">
+              <h3>Partners</h3>
+              <div class="adds-on-body">
+                <p>
+                  Invite other users for full account access and company
+                  management.
+                </p>
+              </div>
+            </div>
+            <div class="adds-on-price">
+              <p>$9<span>/month</span></p>
+            </div>
+          </div>
+          <div class="adds-on-card">
+            <div class="adds-on-content">
+              <h3>Tax Assistant</h3>
+              <div class="adds-on-body">
+                <p>
+                  Track expenses, identify write-offs, and estimate quarterly
+                  taxes easily.
+                </p>
+              </div>
+              <div class="adds-on-learn-more hover-link">
+                <a href="">Learn more</a>
+              </div>
+            </div>
+            <div class="adds-on-price">
+              <p>$10 <span>/month</span></p>
             </div>
           </div>
         </div>
