commit bonsai work

--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -1080,6 +1080,122 @@
         </div>
       </div>
     </section>
+    <section class="section-3">
+      <div class="section-3-container">
+        <img src="./img/Branch.png" alt="" />
+        <h3>Frequently asked questions</h3>
+        <div class="accordion-box">
+          <div class="accordion-item line-bottom">
+            <div class="accordion-heading">
+              <p>How does the free trial work?</p>
+              <div class="accordion-arrow">
+                <img src="img/mobile-menu-icon.svg" alt="" />
+              </div>
+            </div>
+            <div class="accordion-dropdown">
+              <p>
+                When you start your trial with Bonsai you'll receive full,
+                unlimited access to the plan you chose. You will need to enter
+                your credit card information to begin your trial, but don't
+                worry - we won't charge you anything until the trial ends. You
+                can cancel at any time during the trial period via your
+                Subscriptions settings.
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item line-bottom">
+            <div class="accordion-heading">
+              <p>Can I change my plan anytime?</p>
+              <div class="accordion-arrow">
+                <img src="img/mobile-menu-icon.svg" alt="" />
+              </div>
+            </div>
+            <div class="accordion-dropdown">
+              <p>
+                Yes, you can upgrade, downgrade or cancel your plan at any time
+                via your Subscription settings.
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item line-bottom">
+            <div class="accordion-heading">
+              <p>Is my Bonsai subscription tax deductible?</p>
+              <div class="accordion-arrow">
+                <img src="img/mobile-menu-icon.svg" alt="" />
+              </div>
+            </div>
+            <div class="accordion-dropdown">
+              <p>
+                Yes, the IRS allows for tax deduction for software you use to
+                run your business. Bonsai's expense tracking even automatically
+                categorizes your subscription as a deductible software expense.
+              </p>
+            </div>
+          </div>
+          <div class="accordion-item line-bottom">
+            <div class="accordion-heading">
+              <p>What is your refund policy</p>
+              <div class="accordion-arrow">
+                <img src="img/mobile-menu-icon.svg" alt="" />
+              </div>
+            </div>
+            <div class="accordion-dropdown">
+              <p>
+                If you contact us within two weeks of being charged for your
+                subscription, we will be happy to issue a refund for you. Beyond
+                those two weeks, you will need to cancel or modify the
+                subscription from the Subscriptions tab in Settings to avoid
+                future charges, but refunds will not be issued. This applies to
+                both monthly and annual plans.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-4">
+      <div class="section-4-container">
+        <h3>Trusted by 500,500+<br />business owners</h3>
+        <div class="section-4-image-wrapper">
+          <img src="img/company_1.svg" alt="" />
+          <div class="divider"></div>
+          <img src="img/company_2.svg" alt="" />
+        </div>
+
+        <div class="quote-box-wrapper">
+          <div class="quote-box">
+            <ul>
+              <li>"My best friend <span>in scaling my business</span>"</li>
+              <li>"<span>Like putting my</span>" finances on auto-pilot"</li>
+              <li>"<span>Bonsai does</span> the hard work"</li>
+              <li>"<span>Everything is</span> streamlined"</li>
+            </ul>
+            <ul>
+              <li>"<span>Huge</span> timesaver"</li>
+              <li>
+                "<span>it's been</span> the most stress-free year of my life!"
+              </li>
+              <li>"<span>I feel</span> more confident"</li>
+              <li>"<span>Backbone</span> of my business"</li>
+              <li>"So simple"</li>
+            </ul>
+            <ul>
+              <li>"Clients love <span>how easy my systems are</span>"</li>
+              <li>"<span>A</span> must-have!"</li>
+              <li>"I do less admin <span>and do more of what I love</span>"</li>
+              <li>"Worry-free <span>contracts and invoices</span>"</li>
+            </ul>
+            <ul>
+              <li>"It pays for itself"</li>
+              <li>"<span>Great</span> customer service!"</li>
+              <li>"<span>A</span> life-saver"</li>
+              <li>"<span>Clients</span> take me more seriously"</li>
+              <li>"I upped my rates <span>and won more clients</span>"</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="spacer"></div>
   </body>
 </html>
