--- a/Bonsai/index.html
+++ b/Bonsai/index.html
@@ -1196,6 +1196,56 @@
         </div>
       </div>
     </section>
+    <section class="section-5">
+      <div class="section-5-container">
+        <div class="section-5-wrapper">
+          <div class="section-5-image-wrapper">
+            <img src="img/image-1.png" />
+            <img src="img/leave.png" class="leave-image" alt="" />
+          </div>
+          <div class="side-pane">
+            <div class="customer-support">
+              <h3>
+                Need help? We’ll <br />
+                be right with you
+              </h3>
+              <p>
+                Our friendly, speedy, Customer Support has all the answers and
+                is here to help you.
+              </p>
+              <div class="customer-support-link">
+                <a href="#">Contact us</a>
+              </div>
+            </div>
+            <div class="line-bottom"></div>
+            <div class="get-started">
+              <h3>
+                Quick to set up <br />
+                Even easiser to use
+              </h3>
+              <p>
+                You get 7 days to try it for free. And if it's not what you
+                expected, we guarantee your money back within the first two
+                weeks.
+              </p>
+
+              <div class="get-started-button">
+                <a class="button is-small" href="#">Get started</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="section-5-box">
+          <p>
+            Get started in 30 seconds <br />
+            Free for 7 days
+          </p>
+          <div class="section-5-box-button">
+            <a class="button is-medium" href="#">Start free trial now</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="spacer"></div>
   </body>
 </html>
